# SoftwareRT

./: .gitignore  CMakeLists.txt  README.md  meson.build
include/: camera.h  color.h  common.h  config.h  hittable.h  hittable_list.h  image.h  material.h  ray.h  sphere.h  vec3.h  vec3_avx.h  vec3_scalar.h
source/: main.cpp
